Fix bugs. Update Tests. Delete unusaged classes. Add coverage test